# image_captioner

./: .env  .gitignore  README.md  docker-compose.yml  interface.py
front_end/: README.md  package.json
front_end/src/: App.js  ImageResult.js
haproxy/: haproxy.cfg
src/image_db/: .env  Cargo.toml  Dockerfile  reference.db  test.py
src/image_db/src/: db.rs  fs.rs  images.rs  main.rs  weaviate_graphql.rs
