[package]
name = "image_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.1"

serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

futures = "0.3.21"
actix-web = "4.0.1"
actix-multipart = "0.4.0"
actix-files = "0.6.0"
actix-cors = "0.6.1"
uuid = { version = "1.0.0", features = ["v4"] }

# Database
tempfile = "3.3.0"
sqlx = { version = "0.5.13", features = [ "runtime-tokio-native-tls", "sqlite", "macros" ] }
ron = "0.7.0"

# Image processing
libraw-rs = { git = "https://github.com/philippeitis/libraw-rs" }
image = "0.24.2"
fast_image_resize = "0.9.1"
reqwest = { version = "0.11.10", features = [ "json" ] }
base64 = "0.13.0"
tokio = { version = "1.18.2", features = [ "sync" ] }
rayon = "1.5.3"